--- a/src/Delivery.Domain/Delivery.Domain.csproj
+++ b/src/Delivery.Domain/Delivery.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,10 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dictionary\" />
     <Folder Include="Attachement\" />
     <Folder Include="Scan\" />
-    <Folder Include="User\" />
   </ItemGroup>
 
 </Project>
