--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>MultiProject.Delivery.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+    <AssemblyName>Delivery.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
 </Project>
