--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -8,4 +8,12 @@
     <AssemblyName>Delivery.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+  </ItemGroup>
+
 </Project>
