Dodanie FluentValidation do domeny i walidatora recipienta

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -8,4 +8,8 @@
     <RootNamespace>MultiProject.Delivery.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
+  </ItemGroup>
+
 </Project>
