Posprzątanie w walidacji domeny i zmiana result obiektów na użycie ErrorOr

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
+    <PackageReference Include="ErrorOr" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
