--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.0.1" />
+    <PackageReference Include="StronglyTypedId" Version="1.0.0-beta06" />
   </ItemGroup>
 
 </Project>
