Dodanie prostej dokumentacji do projektu

--- a/src/WebApi/appsettings.Development.json
+++ b/src/WebApi/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "Database": {
     "Postgres": {
-      "ConnectionString": "Server=localhost;Port=5432;Database=db;",
+      "ConnectionString": "Server=localhost;Port=5432;Database=deliveries-db;",
       "Username": "postgres",
       "Password": "dupa123"
     }
