--- a/db-docker-compose.yml
+++ b/db-docker-compose.yml
@@ -7,9 +7,16 @@ services:
     #restart: always
     environment:
       POSTGRES_PASSWORD: dupa123
+    ports:
+      - 5432:5432
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
   adminer:
     image: adminer
     #restart: always
     ports:
       - 8080:8080
+
+volumes:
+  postgres-data:
