Dodanie opisu dla Enum-a UserRole dal CreateUserRequest w swaggerze
i mikro refaktor CreateUser

--- a/src/WebApi/WebApi.csproj
+++ b/src/WebApi/WebApi.csproj
@@ -8,6 +8,8 @@
     <DockerfileContext>..\..</DockerfileContext>
     <RootNamespace>MultiProject.Delivery.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <AssemblyName>Delivery.$(MSBuildProjectName)</AssemblyName>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	<NoWarn>CS1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
