Budowa factory do obsługi kontenera DI

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -23,5 +23,6 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="Delivery.Application.Tests.Integration" />
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
 </Project>
