--- a/tests/Application.Tests.Integration/Application.Tests.Integration.csproj
+++ b/tests/Application.Tests.Integration/Application.Tests.Integration.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -32,6 +32,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Application\Application.csproj" />
     <ProjectReference Include="..\..\src\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Domain.Tests.Unit\Domain.Tests.Unit.csproj" />
   </ItemGroup>
 
   <ItemGroup>
