--- a/tests/Domain.Tests.Unit/Domain.Tests.Unit.csproj
+++ b/tests/Domain.Tests.Unit/Domain.Tests.Unit.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="NSubstitute" Version="5.0.0" />
