Dodanie testów integracyjnych WebApi oraz bazy w dockerze

--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="Delivery.Infrastructure.Tests.Unit" />
+    <InternalsVisibleTo Include="Delivery.WebApi.Tests.Integration" />
   </ItemGroup>
 
 </Project>
