--- a/tests/WebApi.Tests.Integration/WebApi.Tests.Integration.csproj
+++ b/tests/WebApi.Tests.Integration/WebApi.Tests.Integration.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Npgsql" Version="7.0.4" />
+    <PackageReference Include="Respawn" Version="6.1.0" />
     <PackageReference Include="Testcontainers" Version="3.3.0" />
     <PackageReference Include="Testcontainers.PostgreSql" Version="3.3.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
